[project]
name = "tidePY"
version = "0.1.0"
description = "A CLI tool for fetching the tide"
authors = [
    { name = "michael-kudrik" }
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"

[tool.setuptools]
packages = ["tidePY"]

[project.scripts]
tideCLI = "tideCLI:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
